--- a/pw_index.html
+++ b/pw_index.html
@@ -10,5 +10,11 @@
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
     <span>text goes here</span>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, voluptatibus earum temporibus culpa necessitatibus quibusdam.</p>
+
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h2 class="'bg-orange">Lorem ipsum dolor sit amet.</h2>
+    <h3 id = 'bg-green' class="bg-orange">Lorem ipsum dolor sit amet.</h3>
+
+    <a target="_parent" href="https://www.pwskills.com"></a>
 </body>
 </html>
