advanced css selectors

--- a/selectors_2.html
+++ b/selectors_2.html
@@ -25,6 +25,6 @@
 
     <h1>Pseudo before and after selector</h1>
     <h2>First letter selector</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui autem veniam, facilis voluptates numquam perferendis officiis porro a reprehenderit quisquam consequuntur eos error excepturi nemo quod minima praesentium dolore deleniti sequi! Omnis, ut perspiciatis modi odit voluptate ipsam animi excepturi voluptatibus saepe, ipsum aliquam sit? Nesciunt nostrum dolorum quod labore!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui autem veniam, facilis voluptates numquam perferendis officiis porro a reprehenderit quisquam consequuntur eos error excepturi nemo quod minima praesentium dolore deleniti sequi! Omnis, ut perspiciatis modi odit voluptate ipsam animi excepturi voluptatibus saepe, ipsum aliquam sit? Nesciunt nostrum dolorum quod labore! 59:21</p>
 </body>
 </html>
